--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#" class="logo">Jordan Rios</a>
         <i class="fa-solid fa-bars" id="menu-icon"></i>
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
+            <a href="#home" class="active">Hom</a>
             <a href="#about" class="active">About</a>
             <a href="#services" class="active">Services</a>
             <a href="#portfolio" class="active">Portfolio</a>
