--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <i class="fa-solid fa-bars" id="menu-icon"></i>
         <nav class="navbar">
             <a href="#home" class="active">Hom</a>
-            <a href="#about" class="active">About</a>
+            <a href="#abou" class="active">About</a>
             <a href="#services" class="active">Services</a>
             <a href="#portfolio" class="active">Portfolio</a>
             <a href="#contact" class="active">Contact</a>
