--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <i class="fa-solid fa-bars" id="menu-icon"></i>
         <nav class="navbar">
             <a href="#home" class="active">Hom</a>
-            <a href="#abou" class="active">About</a>
+            <a href="#about" class="active">About</a>
             <a href="#services" class="active">Services</a>
             <a href="#portfolio" class="active">Portfolio</a>
             <a href="#contact" class="active">Contact</a>
@@ -62,8 +62,8 @@
         <div class="services-container">
             <div class="services-box">
                 <i class="fa-solid fa-code"></i>
-                <h3>IT Support</h3>
-                <p>Building complete web applications from scratch, including both front-end and back-end development. Integrating APIs and third-party services.</p>
+                <h3>IT Suppor</h3>
+                <p>Learned the fundamentals of IT.</p>
             </div>
 
             <div class="services-box">
