service section update

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <div class="services-container">
             <div class="services-box">
                 <i class="fa-solid fa-code"></i>
-                <h3>IT Suppor</h3>
-                <p>Learned the fundamentals of IT.</p>
+                <h3>IT Support</h3>
+                <p>IT support fundamentals, including troubleshooting, networking, system administration, and security</p>
             </div>
 
             <div class="services-box">
