--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <p>Hello, I'm Jordan Rios, a passionate developer with a solid foundation in Computer Science. I am a senior at Millersville University studuing computer science with a minor in mathematics. 
-                My journey through college has equipped me with skills in Java, Python, C/C++, SQL (Postgres), 
-                and JavaScript, along with hands-on experience using tools like Git, eclipse, and VS Code. 
+            <p>Hello, I'm Jordan Rios, a passionate developer with a solid foundation in Computer Science. 
+                I am a senior at Millersville University studuing Computer Science with a minor in Mathematics. 
+                My journey through college has equipped me with skills in Java, C/C++, SQL (Postgres), 
+                and JavaScript, along with hands-on experience using tools like Git, Eclipse, and VS Code. 
                 I’ve worked on exciting projects, including a responsive blogger website 
-                using the MEAN stack. These projects have sharpened my ability to create user-friendly interfaces and 
-                integrate robust functionalities. I am excited to start my career and am eager to learn and grow with a company!</p>
+                using the MEAN stack and a UML Editor built in Java. These projects have sharpened my ability to create user-friendly interfaces and 
+                integrate robust functionalities. I am excited to start my career and am eager to learn and grow with a company!
+            </p>
         </div>
     </section>
 
@@ -94,11 +96,11 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/img1.jpg" alt="">
+                <img src="images/UmlEditor.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>JDBC Lab</h4>
-                    <p>Developed a Java application that interacts with relational databases using JDBC.</p>
-                    <a href="https://github.com/Jordan130/JDBC-Lab" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>UML Editor</h4>
+                    <p>Developed a UML Editor in a team that allows you to represent object-oriented programming (OOP) concepts through diagrams of classes, fields, methods, and relationships.</p>
+                    <a href="https://github.com/Jordan130/2024fa-420-Ctrl-Alt-Elite" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
