Added picture to project section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2 class="heading">Latest <span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="images/img1.jpg" alt="">
+                <img src="images/MEAN-Project.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Blogger</h4>
                     <p>Developed a full stack dynamic blogger page using Amazon Lightsail with MEAN stack.</p>
