Added new project

--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/img1.jpg" alt="">
+                <img src="images/Movie-Search-Engine.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Event Scheduler</h4>
-                    <p>Created a terminal application using Java 11 and its data structures that allowed
-                        users to create and schedule events.</p>
+                    <h4>Movie-Search-Engine</h4>
+                    <p>Created a Movie-Search-Engine in React which allows you to view movies and 
+                        like your favorite ones. The application calls from a public API 
+                        and fetches data on top movies currently.</p>
                     <a href=https://github.com/Jordan130/Events target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
