--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="portfolio-box">
                 <img src="images/Movie-Search-Engine.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Movie-Search-Engine</h4>
+                    <h4>Movie Search Engine</h4>
                     <p>Created a Movie-Search-Engine in React which allows you to view movies and 
                         like your favorite ones. The application calls from a public API 
                         and fetches data on top movies currently.</p>
